--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -165,6 +165,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Setup.md.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -214,6 +215,7 @@
     <Content Include="Views\StudentGrade\Index.cshtml" />
     <Content Include="Views\StudentGrade\_Index.cshtml" />
     <Content Include="Views\StudentGrade\_AddGrade.cshtml" />
+    <Content Include="Setup.bat" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
